# Simple-PPT

./: README.md  README.zh-CN.md  README.zh-TW.md  b1.py  b2.py  b3.py  b4_GUI.py  make-PPT-US-.pptx.lnk  make-PPT-US-.pptx.py  make-PPT-US-.pptx.spec  make-PPT-US-.pptx2.lnk  rc1_GUI.py  rc1_system.py  setup.py  zh_Hans_CN.ts
PyQt/: en-US.qm  relese_system.py  view.py
PySide/: CMakeLists.txt  NoDone.ui  SimplePPT_ui.py  SimplePPT_ui.qml  hello.pptx  lexer.py  new.py  run.py  tools.py  transparse.qph  ui_NoDone.py  view.py  zh-Hans-CN.qm
PySide/Simple-PPT/: CMakeLists.txt  Simple-PPT.pyproject  main.cpp  main.qml
PySide/Simple-PPT/icons/: setsup.qrc
PySide/example/: basic.simp
PySide/i18n/: Eng_UK.qm  Eng_UK.ts  zh_Hans_CN.qm  zh_Hans_CN.ts  zh_Hant_CN.ts
PySide/icon/: Uisetup.py  Uisetup.qrc
Python/sever/: sever.py
Qt for C++(QML)Test/: main.qml
code/: installer.py  rc2_GUI.py  rc2_system.py
sever/: rc2_sever.py
use/: installer.py  rc2_GUI.py  rc2_system.py  relese_GUI.py  relese_system.py  uninstaller.py
